# serl-mock

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
config/: serl_mock.yaml
data/mock/: bst_dates_to_2030.csv
data/reference/: serl_covid19_survey_data_dictionary_edition07.csv  serl_epc_data_dictionary_edition07.csv  serl_follow_up_survey_data_dictionary_edition07.csv  uk_bank_holidays_england_wales_scotland.csv
docs/: 00_overview.md  01_structure.md  02_configuration.md  03_generation_model.md  04_metadata.md  05_working_notes.md  METADATA.md  RAW_DATA.md  SMART_METER_SYNTHETIC.md
docs/documentation/: serl_survey_data_dictionary_edition07.csv
notebooks/: explore_mock_data.ipynb
scripts/: generate_bank_holidays_csv.py  generate_mock_data.py  quick_db_inspection.py  scratch.py
src/serl_mock/: __init__.py  generator_contextual_data.py  generator_household_traits.py  generator_smartmeter.py  ids.py  paths.py  patterns.py  profiles.py  utils.py  weather_downloader.py
