[project]
name = "serl-mock"
version = "0.1.0"
description = "Generates dummy SERL-style datasets for local development and pipeline testing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.7",
    "netcdf4",
    "numpy",
    "pandas",
    "pyyaml",
    "xarray",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "matplotlib>=3.10.8",
    "ipykernel>=7.2.0",
]
